# repo-translate

./: .gitignore  LICENSE  README.md  README_ja.md  README_ko.md  README_zh-CN.md  README_zh-TW.md  pyproject.toml
src/: __init__.py  cli.py  config.py
src/auth/: __init__.py  store.py
src/parser/: __init__.py  base.py  c_cpp.py  javascript.py  markdown.py  python.py  rust.py  swift.py  typescript.py
src/repo/: __init__.py  clone.py
src/translator/: __init__.py  openai.py
